--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,12 @@ target_sources(${LIBRARY_NAME} PRIVATE
 	${SRC_DIR}/colorspaceconversion/colorspace_conversion.cpp
 	${SRC_DIR}/entropyencoding/huffman.cpp
 	${SRC_DIR}/payloadextraction/payload_extraction.cpp)
+set_property(TARGET ${LIBRARY_NAME} PROPERTY CXX_STANDARD 20)
 
 # ADD EXECUTABLE(S)
 add_executable(huffman_cli)
 target_include_directories(huffman_cli PRIVATE ${INC_DIR})
 target_sources(huffman_cli PRIVATE
 	      ${SRC_DIR}/clitools/huffman_cli.cpp)
-      target_link_libraries(huffman_cli PRIVATE ${LIBRARY_NAME})
+target_link_libraries(huffman_cli PRIVATE ${LIBRARY_NAME})
+set_property(TARGET huffman_cli PROPERTY CXX_STANDARD 20)
